--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
     <script defer="defer" src="/static/js/main.a52c3a10.js"></script>
-    <link href="../scr/css/main.css" rel="stylesheet" />
+    <link href="../css/main.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
