--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,12 @@
           <button class="add-button">추가하기</button>
         </form>
         <div class="list-container">
-          <h2 class="list-title">Working.. 🔥</h2>
+          <h2 class="list-title">Working.. ⏰</h2>
           <div class="list-wrapper">
             <div class="todo-container">
               <div>
                 <h2 class="todo-title">리액트 공부하기</h2>
+                <a class="todo-page" href="/1"><div>상세보기</div></a>
                 <div>리액트 기초를 공부해봅시다.</div>
               </div>
               <div class="button-set">
@@ -50,7 +51,7 @@
               </div>
             </div>
           </div>
-          <h2 class="list-title">Done..! 🎉</h2>
+          <h2 class="list-title">Done..! ⚡</h2>
           <div class="list-wrapper">
             <div class="todo-container">
               <div>
